@@ -86,14 +86,14 @@ function appendCSS(text) {
 	return s;
 }
 
-// document.write special stylesheet links
+// special stylesheet links
 if (typeof stylepath != 'undefined' && typeof skin != 'undefined') {
 	if (is_opera_preseven) {
-		document.write('<link rel="stylesheet" type="text/css" href="'+stylepath+'/'+skin+'/Opera6Fixes.css">');
+		importStylesheetURI(stylepath+'/'+skin+'/Opera6Fixes.css');
 	} else if (is_opera_seven && !is_opera_95) {
-		document.write('<link rel="stylesheet" type="text/css" href="'+stylepath+'/'+skin+'/Opera7Fixes.css">');
+		importStylesheetURI(stylepath+'/'+skin+'/Opera7Fixes.css');
 	} else if (is_khtml) {
-		document.write('<link rel="stylesheet" type="text/css" href="'+stylepath+'/'+skin+'/KHTMLFixes.css">');
+		importStylesheetURI(stylepath+'/'+skin+'/KHTMLFixes.css');
 	}
 }
 
